I have to fix Account service

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,5 @@ includeBuild 'eureka-server'
 includeBuild 'api-gateway'
 includeBuild 'auth-service'
 includeBuild 'cloud-config'
+includeBuild 'sender-service'
+includeBuild 'account-service'
